Thu Oct 21 11:10:56 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ACE.cpp:
        * ace/FILE_IO.h:
        * ace/Free_List.h:
        * ace/Handle_Set.h:
        * ace/Log_Msg.h:
        * ace/WIN32_Asynch_IO.h:
          Doxygen changes

Wed Oct 20 18:19:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          If we just see dollarIddollar we trigger an error, svn:keywords is
          than lacking

Wed Oct 20 16:07:09 UTC 2010  Steve Huston  <shuston@riverace.com>

        * ace/Timer_Queue_Adapters.cpp (ACE_Thread_Timer_Queue_Adapter::svc):
        * ace/Timer_Queue_T.cpp (expire):
          Temporarily release and reacquire the mutex around timer dispatch.
          This prevents a deadlock on user code with multiple threads doing
          timer-related operations.

Wed Oct 20 09:22:46 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/global.features:
          Add nddsmonitor as default to 0

Wed Oct 20 09:19:25 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.h:

        * bin/MakeProjectCreator/config/global.features:

        * tests/Time_Value_Test.cpp:

Tue Oct 19 18:11:57 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/Caching_Utility_T.cpp:
          Added missing include.

Tue Oct 19 09:44:45 UTC 2010  Olli Savia  <ops@iki.fi>

        * ace/Caching_Utility_T.cpp:
          Use ACE::is_equal() to compare floating point values.

Fri Oct 15 10:18:05 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Bug_3911_Regression_Test.cpp:
          Fixed warning

Thu Oct 14 18:29:35 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/run_test.lst:
        * tests/tests.mpc:
          3911 doesn't work with ace_for_tao

Thu Oct 14 13:15:00 UTC 2010  Martin Corino  <mcorino@remedy.nl>

        * ace/Process.h:
        * ace/Process.cpp: